# dslbot

./: .gitignore  README.md  pyproject.toml  requirements.txtcd  run_repl.py
cli/: main.py
dsl/: grammar.lark  parser.py
intent/: llm_client.py  mock_llm.py
runtime/: actions.py  executer.py  executor.py  state.py
samples/: campus.dsl  logistics.dsl  refund.dsl
